# commissions-calculator

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  finalis_engine.py  lambda_handler.py  main.py  pyproject.toml  requirements-lambda.txt  requirements.txt  template.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: API.md  test_scenarios_business_summary.md
docs/schemas/: deal-request.schema.json  deal-response.schema.json
engine/: __init__.py  models.py  output.py  processor.py  validators.py
engine/calculators/: __init__.py  commission.py  cost_cap.py  credit.py  debt.py  fees.py  payout.py  subscription.py
scripts/: validate_test_docs_sync.py
static/: index.html
tests/: old_tests.py  test_commission_calculator.py  test_cost_cap.py  test_credit_applicator.py  test_debt_collector.py  test_docs_sync.py  test_engine.py  test_fee_calculator.py  test_integration_scenarios.py  test_lambda_handler.py  test_subscription_applicator.py
